@@ -12,6 +12,7 @@ PHP                                                                        NEWS
   . Fixed bug #65769 (localeconv() broken in TS builds). (Anatol)
   . Fixed bug #65230 (setting locale randomly broken). (Anatol)
   . Fixed bug #68545 (NULL pointer dereference in unserialize.c). (Anatol)
+  . Fixed bug #68583 (Crash in timeout thread). (Anatol)
 
 - cURL:
   . Fixed bug #67643 (curl_multi_getcontent returns '' when
